--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -8,8 +8,7 @@
 <body>
 
 <div class="wrapper">
-    <form id="signup_form" th:object="${user}" th:action="@{/signup}" method="post"
-          onsubmit="return check()">
+    <form id="signup_form" th:object="${user}" th:action="@{/signup}" method="post">
         <div id="error" class="error">
             <span th:if="${username_exists}" th:text="${username_exists}"></span>
         </div>
@@ -19,50 +18,30 @@
             <input type="text" th:field="*{username}"
                    id="username"
                    placeholder="Letters, digits, _"
-                   pattern="[a-zA-Z0-9_]+"
-                   required="required">
+                   pattern="[a-zA-Z0-9_]+">
             <span id="username_msg"></span>
         </div>
         <div>Password
             <input type="password" th:field="*{password}"
                    id="password"
                    pattern="[a-zA-Z0-9]{8,}"
-                   placeholder="At least 8 letters or digits"
-                   required="required">
+                   placeholder="At least 8 letters or digits">
             <span id="password_msg"></span>
         </div>
         <div>Confirm password
             <input type="password"
                    id="confirm_password"
                    pattern="[a-zA-Z0-9]{8,}"
-                   placeholder="At least 8 letters or digits"
-                   required="required">
+                   placeholder="At least 8 letters or digits">
             <span id="confirm_msg"></span>
         </div>
         <div>Email
-            <input type="email" placeholder="example@mail.com" th:field="*{email}"
-                   required="required">
+            <input type="email" placeholder="example@mail.com" th:field="*{email}" id="email">
         </div>
-        <button type="submit" value="Sign up">Sign Up</button>
+        <button type="button" value="Sign up" onclick="return submitForm()">Sign Up</button>
         <a href="/login">Do you have an account? Sign in</a>
     </form>
 </div>
-<script>
-    function check() {
-        let password = document.getElementById('password').value
-        let confirm_passsword = document.getElementById('confirm_password').value
-        let msg = document.getElementById('error')
-        msg.innerText = ''
-
-        if (password != confirm_passsword) {
-            msg.innerHTML = 'Confirm password does not match!'
-            return false
-        } else {
-            msg.innerText = ''
-            return true
-        }
-    }
-</script>
-<script type="application/javascript" src="js/register.js"></script>
+<script type="application/javascript" src="js/signup.js"></script>
 </body>
 </html>
