--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -16,7 +16,7 @@
             <div>
                 <a href="/events/all">Back</a>
             </div>
-            <div id="event_id" th:text="${event.id}"></div>
+            <div id="event_id" th:text="${event.id}" style="display: none"></div>
             <h1 th:text="${event.title}"></h1>
             <div th:if="${subscribed}">You are subscribed on this event</div>
         </div>
@@ -34,10 +34,8 @@
             </div>
         </div>
         <div sec:authorize="hasRole('ROLE_USER')" th:unless="${subscribed}">
-            <form th:action="@{/events/{id}/subscribe(id=${event.id})}" onsubmit="return confirm('subscribe?')"
-                  method="post">
-                <button class="btn1" type="submit">Subscribe <i class="fa fa-check"></i></button>
-            </form>
+            <button id="subscribe_btn" class="btn1" onclick="getSubscription()">Subscribe <i class="fa fa-check"></i>
+            </button>
         </div>
         <div sec:authorize="hasRole('ROLE_USER')" th:if="${subscribed}">
             <form th:action="@{/events/{id}/unsubscribe(id=${event.id})}" onsubmit="return confirm('unsubscribe?')"
@@ -78,10 +76,11 @@
             </table>
 
         </div>
-
     </div>
 </div>
 <script type="text/javascript" src="/js/loadSubscriptions.js">
+</script>
+<script type="text/javascript" , src="/js/event.js">
 </script>
 </body>
 
