--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -55,6 +55,6 @@
         }
     }
 </script>
-<script type="application/javascript" src="js/register.js"></script>
+<script type="application/javascript" src="js/signup.js"></script>
 </body>
 </html>
