--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -37,7 +37,7 @@
                 </div>
                 <div>
                     <form action="/profile/edit">
-                        <button class="b1">Edit profile info <i class="fa fa-user"></i></button>
+                        <button class="btn1 active">Edit profile info <i class="fa fa-user"></i></button>
                     </form>
                 </div>
             </div>
@@ -61,5 +61,6 @@
         </div>
     </div>
 </div>
+<div th:insert="fragments::scripts"></div>
 </body>
 </html>
