--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>KhPI</title>
     <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/dropdown.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     </script>
 </head>
@@ -12,14 +13,13 @@
 
 <div class="topnav" th:fragment="topnav">
     <div class="dropdown">
-        <button class="dropbtn"><i class="fa fa-bars"> Menu</i></button>
-        <div class="dropdown-content">
+        <button class="dropbtn">Menu</button>
+        <div id="myDropdown" class="dropdown-content">
             <a href="/">Home</a>
             <a href="/events/all">Events</a>
             <a sec:authorize="hasRole('ROLE_ADMIN')" href="/users/all">Users</a>
         </div>
     </div>
-
     <div class="row_block">
         <a sec:authorize="isAnonymous()" href="/login">Login</a>
         <a sec:authorize="isAnonymous()" href="/signup">Sign Up</a>
@@ -29,6 +29,9 @@
         <a onclick="return confirm('Logout?')"
            sec:authorize="isAuthenticated()" href="/logout">Logout</a>
     </div>
+</div>
+<div th:fragment="scripts">
+    <script type="text/javascript" src="/js/dropdown.js"></script>
 </div>
 </body>
 </html>
