--- a/src/main/resources/static/styles/dropdown.css
+++ b/src/main/resources/static/styles/dropdown.css
@@ -1,5 +1,5 @@
 .dropbtn {
-    background-color: cadetblue;
+    background-color: dodgerblue;
     width: 200px;
     color: white;
     padding: 16px;
@@ -12,7 +12,7 @@
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: darkcyan;
+    background-color: #1372cd;
 }
 
 /* The container <div> - needed to position the dropdown content */
