--- a/src/main/resources/templates/events/event.html
+++ b/src/main/resources/templates/events/event.html
@@ -78,7 +78,7 @@
 </script>
 <script type="text/javascript" , src="/js/event.js">
 </script>
-<script type="text/javascript" src="/js/dropdown.js"></script>
+<div th:insert="fragments::scripts"></div>
 </body>
 
 </html>
