--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,6 +32,7 @@
 </div>
 <div th:fragment="scripts">
     <script type="text/javascript" src="/js/dropdown.js"></script>
+    <script type="text/javascript" src="/js/user.js"></script>
 </div>
 </body>
 </html>
