--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -7,7 +7,7 @@ body {
 }
 
 textarea {
-    font-size: 20px;
+    font-size: 15px;
     font-family: "Roboto", sans-serif;
 }
 
@@ -34,7 +34,7 @@ body::-webkit-scrollbar {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background: cadetblue;
+    background: dodgerblue;
     position: fixed;
     top: 0;
     left: 0;
@@ -53,7 +53,7 @@ body::-webkit-scrollbar {
 }
 
 .topnav a:hover {
-    background-color: darkcyan;
+    background-color: #1372cd;
 }
 
 .row_block {
@@ -67,20 +67,16 @@ body::-webkit-scrollbar {
 }
 
 
-
-
-
 .wrapper {
     margin: auto;
     margin-top: 50px;
     background-color: white;
-    width: 500px;
+    width: 80%;
     min-height: 200px;
     padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-around;
 }
 
