--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -11,19 +11,29 @@
 <div id="main" class="main">
     <div th:insert="fragments::topnav"></div>
     <div class="page">
-        <h1>Profile page</h1>
-        <div class="row_block" style="width: 100%">
-            <div class="column_block">
-                <div class="img_wrap">
-                    <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
-                    <img th:unless="${image}" src="/img/profile.png">
+        <div class="header">
+            <div>Profile page</div>
+            <div th:if="${not_ready}">
+                You should complete profile info
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Change</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="/profile/edit">Profile info</a>
+                    <a href="/profile/psw_change">Password</a>
                 </div>
-                <div th:text="${user.username}"></div>
-                <div th:text="${user.email}"></div>
-                <div><a href="/profile/psw_change">Change password</a></div>
+            </div>
+        </div>
+
+        <div class="row_block" style="width: 100%">
+            <div class="img_wrap">
+                <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
+                <img th:unless="${image}" src="/img/profile.png">
             </div>
             <div class="column_block card_block" style="justify-content: space-between">
                 <div>
+                    <div th:text="${user.username}"></div>
+                    <div th:text="${user.email}"></div>
                     <div th:if="${ready}">
                         <div th:text="${profile.name}"></div>
                         <div th:text="${university}"></div>
@@ -31,14 +41,6 @@
                         <div th:text="${profile.age}"></div>
                         <div th:text="${profile.gender}"></div>
                     </div>
-                    <div th:if="${not_ready}">
-                        You should complete profile info
-                    </div>
-                </div>
-                <div>
-                    <form action="/profile/edit">
-                        <button class="btn1 active">Edit profile info <i class="fa fa-user"></i></button>
-                    </form>
                 </div>
             </div>
         </div>
