--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -7,42 +7,31 @@
 <body>
 <div class="wrapper">
 
-    <div th:if="${param.error}" class="error">Invalid credentials!</div>
-    <div th:if="${param.access}" class="error">Access denied!</div>
-    <h2>Please sign in</h2>
+    <div th:if="${param.error}" class="error">Неверные логин или пароль!</div>
+    <div th:if="${param.access}" class="error">Нет прав доступа!</div>
+    <h2>Войдите в аккаунт</h2>
     <form name="f" th:action="@{/login}" method="post">
 
-        <label>Username
-            <input type="text" placeholder="Enter Username" name="username" id="username"
+        <label>Логин
+            <input type="text" placeholder="Логин" name="username" id="username"
                    onkeyup="copyUsername()" required="required"> </label>
-        <label>Password
+        <label>Пароль
             <input type="password"
-                   placeholder="Enter Password" name="password" required="required">
+                   placeholder="Пароль" name="password" required="required">
         </label>
-        <button type="submit">Login</button>
+        <button type="submit">Войти</button>
     </form>
     <form action="/psw_forgot" method="post">
         <input type="hidden" name="username" id="copy_username">
-        <input type="submit" value="Forgot password">
+        <input type="submit" value="Забыл пароль">
     </form>
-    <div><a href="/signup">Do you have no account? Sign up</a></div>
+    <div><a href="/signup">Нет аккаунта? Зарегистрируйтесь</a></div>
 </div>
 <script>
     function copyUsername() {
         let username = document.getElementById('username')
         let copy_username = document.getElementById('copy_username')
         copy_username.value = username.value
-    }
-
-    function sendPostRequest() {
-        let xhr = new XMLHttpRequest()
-        let url = '/psw_forgot'
-        xhr.open('POST', url, true)
-        xhr.setRequestHeader('Content-type', 'application/json');
-        xhr.onload = function () {
-            console.log(this.responseText)
-        }
-        xhr.send(document.getElementById('username').value)
     }
 </script>
 </body>
