--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -13,7 +13,7 @@
 <div class="page">
     <div class="header">
         <div>
-            <h1>Users list</h1>
+            <h1>Участники</h1>
         </div>
         <div>
             <div class="search-container">
@@ -27,11 +27,11 @@
     </div>
     <table>
         <thead>
-        <td>Username</td>
-        <td>Email</td>
-        <td>name</td>
-        <td>University</td>
-        <td>City</td>
+        <td>Логин</td>
+        <td>Почта</td>
+        <td>Имя</td>
+        <td>Университет</td>
+        <td>Город</td>
         </thead>
         <tbody id="users">
 
