--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -36,6 +36,7 @@
                     <input type="text" placeholder="Start typing...">
                 </div>
                 <input type="hidden" name="cityName" id="cityName" th:value="${cityName}">
+                <input type="hidden" name="cityId" id="cityId">
             </div>
         </div>
         <div>
@@ -50,6 +51,7 @@
                     <input type="text" placeholder="Start typing...">
                 </div>
                 <input type="hidden" name="universityName" id="universityName" th:value="${universityName}">
+                <input type="hidden" name="universityId" id="universityId">
             </div>
         </div>
         <div>
@@ -84,6 +86,7 @@
             alert("Enter your university!")
             return false
         } else {
+
             return confirm('Submit data?')
         }
     }
