--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -25,13 +25,13 @@
             </div>
         </div>
     </div>
-    <table>
+    <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
         <thead>
-        <td>Логин</td>
-        <td>Почта</td>
-        <td>Имя</td>
-        <td>Университет</td>
-        <td>Город</td>
+        <th>Логин</th>
+        <th>Почта</th>
+        <th>Имя</th>
+        <th>Университет</th>
+        <th>Город</th>
         </thead>
         <tbody id="users">
 
