--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -164,24 +164,22 @@ textarea.text {
     background-color: grey;
 }
 
-.grid-table {
-    display: grid;
-    width: 100%;
+table tbody {
+    display: block;
+    max-height: 400px;
+    overflow-y: scroll;
 }
 
-table {
+table thead, table tbody tr {
+    display: table;
     width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    table-layout: fixed;
 }
 
-table thead {
-    width: 100%;
-    background: #e9e9e9;
-}
-
-td {
+th {
     padding: 10px;
 }
+
 
 input .wrong {
     box-shadow: 0 0 5px red;
