--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,6 +6,10 @@
     <title>KhPI</title>
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/dropdown.css">
+    <link rel="stylesheet" href="/styles/selectbox.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"/>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     </script>
 </head>
@@ -34,6 +38,7 @@
 <div th:fragment="scripts">
     <script type="text/javascript" src="/js/dropdown.js"></script>
     <script type="text/javascript" src="/js/user.js"></script>
+    <script type="text/javascript" src="/js/selectbox.js"></script>
 </div>
 </body>
 </html>
