--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -72,7 +72,7 @@
         <button type="submit">Apply</button>
     </form>
 </div>
-<script type="application/javascript" src="/js/load_cities.js"></script>
+<script type="application/javascript" src="/js/selectUniversity.js"></script>
 <script type="application/javascript" src="/js/selectbox.js"></script>
 <script>
     function check() {
