--- a/src/main/resources/templates/users/email.html
+++ b/src/main/resources/templates/users/email.html
@@ -13,14 +13,30 @@
     <div class="header">
         Отправка писем
     </div>
+    <div style="width: 60%; border: 1px solid black">
+        Участники этого события получат сообщение
+        <div id="eventSelectBox" class="select-box">
+            <div id="eventOptionsContainer" class="options-container">
+            </div>
+            <div id="eventSelected" class="selected">
+                Выбери событие
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Ввод...">
+            </div>
+            <input type="hidden" name="eventName" id="eventName">
+            <input type="hidden" name="eventId" id="eventId">
+        </div>
+    </div>
+    <button class="mdl-button mdl-js-button">
+        Ok
+    </button>
     <div class="wrapper">
-    <textarea id="message" rows="10" cols="20" wrap="hard" placeholder="Введите сообщение">
-
+        <textarea id="message" rows="10" cols="20" wrap="hard" placeholder="Введите сообщение">
     </textarea>
     </div>
 </div>
-
-
+</div>
 <div th:insert="fragments::scripts">
 </div>
 </body>
